--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,10 +79,7 @@
 
 - name: Verify windows_exporter is responding to requests.
   win_uri:
-    url: http://localhost:{{ windows_exporter_listen_port }}/
-    return_content: true
-  register: metrics_output
-  failed_when: "'Metrics' not in metrics_output.content"
+    url: http://localhost:{{ windows_exporter_listen_port }}/metrics
   when:
     - windows_exporter_start_mode != 'disabled'
     - windows_exporter_start_mode != 'manual'
